# pyinrs

./: .rustfmt.toml  Cargo.toml  LICENSE  README.md  readme.md
benches/: benchmark.rs
src/: complex.rs  decimal.rs  deque.rs  detail.rs  dict.rs  fraction.rs  int.rs  lib.rs  list.rs  set.rs  str.rs  utility.rs
tests/: test_complex.rs  test_decimal.rs  test_demo.rs  test_deque.rs  test_dict.rs  test_fraction.rs  test_int.rs  test_list.rs  test_set.rs  test_str.rs
