[package]
name = "pyinrs"
version = "1.7.0"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["Qingyu Chen <chen_qingyu@qq.com>"]
description = "A Rust type library that is as easy to use as Python built-in types."
readme = "readme.md"
repository = "https://github.com/chen-qingyu/pyinrs"
keywords = ["type", "python"]

[dependencies]
rand = "0.8"
regex = "1"
auto-impl-ops = "0.2"

[dev-dependencies]
rstest = "0"
criterion = "0"
mymatrix = "0"

[[bench]]
name = "benchmark"
harness = false
