[package]
name = "pyinrs"
version = "1.10.0"
edition = "2021"
license = "MIT"
authors = ["Chen QingYu <chen_qingyu@qq.com>"]
description = "A Rust type library that is as easy to use as Python built-in types."
readme = "readme.md"
repository = "https://github.com/chen-qingyu/pyinrs"
keywords = ["type", "python"]

[dependencies]
rand = "0.9"
regex = "1.11"
auto-impl-ops = "0.2"

[dev-dependencies]
rstest = "0.24"
criterion = "0.5"
mymatrix = "0.8"

[[bench]]
name = "benchmark"
harness = false
